[package]
name = "graphiti"
version = "0.1.3"
edition = "2021"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
graphiti provides a rust macro dsl and builder for creating and describing
arbitrary sets of related data using a serializable description type.
"""
homepage = "https://github.com/matthewjberger/graphiti"
repository = "https://github.com/matthewjberger/graphiti"
keywords = ["graph", "simulation"]
license = "MIT"

[dependencies]
legion = "0.4.0"
once_cell = "1.18.0"
petgraph = { version = "0.6.4", features = ["serde-1"] }
serde = { version = "1.0.189", features = ["derive"] }
snafu = "0.7.5"

[dependencies.getrandom]
version = "0.2.10"
features = ["js"]

[dependencies.uuid]
version = "1.5.0"
features = ["v4"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
legion = { version = "0.4.0", default-features = false, features = [
    "wasm-bindgen",
] }
